--- a/src/index.css
+++ b/src/index.css
@@ -12,21 +12,11 @@ code {
     monospace;
 }
 
-a {
-  color: green;
-  cursor: pointer;
-}
-
-a:hover {
-  text-decoration: underline;
-  font-weight: bold;
-}
-
-.video-list {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-}
-
-.item-box {
-  padding: 2% 5%;
+.search-input {
+  font-size: 1.1em;
+  border-radius: 1%;
+  border: none;
+  background-color: black;
+  color: whitesmoke;
+  padding: 1.5%;
 }
